--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,11 @@ jobs:
     # Download our master branch
     steps:
     - uses: actions/checkout@v2
-
+    - name: Set-up Node
+      uses: actions/setup-node@v1
+      with:
+        node-version: "10.x"
+    - run: npm install
     # Run our deployment command
     - name: Deploying the static website to gh-pages
       run: npm run deploy
