--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set-up Node
       uses: actions/setup-node@v1
+      with:
+        node-version: "16.15.1"
     - run: npm install
     # Run our deployment command
     - name: Deploying the static website to gh-pages
