--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,5 @@ jobs:
     # Run our deployment command
     - name: Deploying the static website to gh-pages
       run: npm run deploy
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_REPO_TOKEN }}
